Footer overlapping content fix

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -5,3 +5,14 @@
     bottom: 0;
     width: 100%;
 }
+body {
+    padding-bottom: 120px;
+}
+
+.page-footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 114px;
+}
